@@ -3,5 +3,5 @@
 #
 PKG_MAJOR=2
 PKG_MINOR=2
-PKG_REVISION=2
+PKG_REVISION=3
 PKG_BUILD=0
